--- a/autocorrelate/.project
+++ b/autocorrelate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>autocorolate</name>
+	<name>autocorrelate</name>
 	<comment></comment>
 	<projects>
 	</projects>
