--- a/autocorrelate/cpp/Makefile.am.ide
+++ b/autocorrelate/cpp/Makefile.am.ide
@@ -3,8 +3,8 @@
 # and choosing Resource Configurations -> Exclude from build. Re-include files
 # by opening the Properties dialog of your project and choosing C/C++ Build ->
 # Tool Chain Editor, and un-checking "Exclude resource from build "
-redhawk_SOURCES_auto = autocorolate.cpp
-redhawk_SOURCES_auto += autocorolate.h
-redhawk_SOURCES_auto += autocorolate_base.cpp
-redhawk_SOURCES_auto += autocorolate_base.h
+redhawk_SOURCES_auto = autocorrelate.cpp
+redhawk_SOURCES_auto += autocorrelate.h
+redhawk_SOURCES_auto += autocorrelate_base.cpp
+redhawk_SOURCES_auto += autocorrelate_base.h
 redhawk_SOURCES_auto += main.cpp
