--- a/fastfilter/.project
+++ b/fastfilter/.project
@@ -23,11 +23,6 @@ program.  If not, see http://www.gnu.org/licenses/.
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>gov.redhawk.ide.codegen.builders.TopLevelBuildScript</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>gov.redhawk.ide.codegen.jet.cplusplus.builder</name>
 			<arguments>
 			</arguments>
@@ -38,7 +33,7 @@ program.  If not, see http://www.gnu.org/licenses/.
 			<arguments>
 				<dictionary>
 					<key>?name?</key>
-					<value></value>
+					<value/>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.append_environment</key>
@@ -50,7 +45,7 @@ program.  If not, see http://www.gnu.org/licenses/.
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildArguments</key>
-					<value></value>
+					<value/>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildCommand</key>
