--- a/fastfilter/cpp/Makefile.am
+++ b/fastfilter/cpp/Makefile.am
@@ -41,5 +41,5 @@ distclean-local:
 include $(srcdir)/Makefile.am.ide
 fastfilter_SOURCES = $(redhawk_SOURCES_auto)
 fastfilter_CXXFLAGS = -Wall $(PROJECTDEPS_CFLAGS) $(BOOST_CPPFLAGS) $(INTERFACEDEPS_CFLAGS) $(redhawk_INCLUDES_auto ) -I../../dsp/inc -I../../fftlib/inc
-fastfilter_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto) -ldsp -lfftlib
+fastfilter_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(BOOST_SYSTEM_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto) -ldsp -lfftlib
 fastfilter_LDFLAGS = -Wall $(redhawk_LDFLAGS_auto) -L../../dsp/Release -L../../fftlib/Release
