--- a/sourcesocket/cpp/Makefile.am
+++ b/sourcesocket/cpp/Makefile.am
@@ -41,5 +41,5 @@ distclean-local:
 include $(srcdir)/Makefile.am.ide
 sourcesocket_SOURCES = $(redhawk_SOURCES_auto)
 sourcesocket_CXXFLAGS = -Wall $(PROJECTDEPS_CFLAGS) $(BOOST_CPPFLAGS) $(INTERFACEDEPS_CFLAGS) $(redhawk_INCLUDES_auto)
-sourcesocket_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto)
+sourcesocket_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(BOOST_SYSTEM_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto)
 sourcesocket_LDFLAGS = -Wall $(redhawk_LDFLAGS_auto)
